--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
 Changelog
 
-*Tue Apr 30 2013 Kei FUNAGAYAMA <funagayama_kei@cyberagent.co.jp> - 0.6.9
+* Tue Jun 25 2013 Kei FUNAGAYAMA <funagayama_kei@cyberagent.co.jp> - 0.6.10
+ - Add: Bucks.VERSION 
+ - Add: onError support
+ - Add: forced jshint and jsdoc
+
+* Tue Apr 30 2013 Kei FUNAGAYAMA <funagayama_kei@cyberagent.co.jp> - 0.6.9
  - first release.
